fix(my-daos): header-button-vertical-alignment-fix

--- a/pages/all/daos/AllDaosPage.module.scss
+++ b/pages/all/daos/AllDaosPage.module.scss
@@ -23,10 +23,10 @@
   }
 
   h1 {
-    margin: 0 24px 0 0;
+    margin: 0 0 20px;
 
-    @include astro-mobile {
-      margin-bottom: 20px;
+    @include tablet-portrait {
+      margin: 0 48px 0 0;
     }
   }
 }
